--- a/framework/assets/stylish/components/_block.scss
+++ b/framework/assets/stylish/components/_block.scss
@@ -3,19 +3,19 @@
 
 
 .block{
-  @include move(bottom, $block_move_bottom);
-  @include move_in(bottom, $block_move_in_bottom);
+	@include map_property_generate($block_move_sizes, move, margin, bottom);
+	@include map_property_generate($block_move_sizes, move_in, padding, bottom);
 
   .b_title{
     position: relative;
-    @include move(bottom, $block_b_title_move_bottom, $default_show:true);
-    @include move_in(bottom, $block_b_title_move_in_bottom);
+	  @include map_property_generate($block_b_title_move_sizes, move, margin, bottom, true);
+	  @include map_property_generate($block_b_title_move_sizes, move_in, padding, bottom);
     @include border($block_border_position, $block_border_width, $block_border_style, $block_border_color);
 
     .title{
       position: relative;
-      @include move(bottom, $block_title_move_bottom);
-      @include move_in(bottom, $block_title_move_in_bottom);
+		@include map_property_generate($block_title_move_sizes, move, margin, bottom);
+		@include map_property_generate($block_title_move_sizes, move_in, padding, bottom);
     }
     .subtitle{}
   }
@@ -25,14 +25,14 @@
 //Wrapper to correct for block margin
 .block_wrap
 .block_wrapper{
-  @include move(bottom, -$block_move_bottom);
+	@include map_property_generate($btn_set_btn_move_sizes, move, margin, bottom, false, true);
 }
 
 
 //Button set to move btn on responsive
 .btn_set{
-  @include move(bottom, -$btn_set_btn_move); overflow: hidden;
+	@include map_property_generate($btn_set_btn_move_sizes, move, margin, bottom, false, true); overflow: hidden;
   .btn,
-  .btn_link{ @include move(bottom, $btn_set_btn_move);}
+  .btn_link{ @include map_property_generate($btn_set_btn_move_sizes, move, margin, bottom);}
   .btn_link{ display: block}
 }
