--- a/framework/assets/stylish/components/_accordion.scss
+++ b/framework/assets/stylish/components/_accordion.scss
@@ -1,4 +1,7 @@
-/* ACCORDION */
+/*
+ACCORDION
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
