--- a/framework/assets/stylish/components/_block.scss
+++ b/framework/assets/stylish/components/_block.scss
@@ -1,4 +1,7 @@
-/* BLOCK */
+/*
+BLOCK
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
