--- a/framework/assets/stylish/components/_breadcrumbs.scss
+++ b/framework/assets/stylish/components/_breadcrumbs.scss
@@ -1,4 +1,7 @@
-/* BREADCRUMBS */
+/*
+BREADCRUMBS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
