--- a/framework/assets/stylish/components/_divider.scss
+++ b/framework/assets/stylish/components/_divider.scss
@@ -1,4 +1,7 @@
-/* DIVIDER AND SPACER */
+/*
+DIVIDER AND SPACER
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
