--- a/framework/assets/stylish/components/_modal.scss
+++ b/framework/assets/stylish/components/_modal.scss
@@ -1,4 +1,7 @@
-/* MODAL */
+/*
+MODAL
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
