--- a/framework/assets/stylish/components/_msg.scss
+++ b/framework/assets/stylish/components/_msg.scss
@@ -1,4 +1,7 @@
-/* MESSAGES */
+/*
+MESSAGES
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
