--- a/framework/assets/stylish/components/_nav.scss
+++ b/framework/assets/stylish/components/_nav.scss
@@ -1,4 +1,7 @@
-/* NAVIGATION */
+/*
+NAVIGATION
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
