--- a/framework/assets/stylish/components/_other.scss
+++ b/framework/assets/stylish/components/_other.scss
@@ -1,4 +1,7 @@
-/* GENERAL */
+/*
+GENERAL
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
