--- a/framework/assets/stylish/components/_paginations.scss
+++ b/framework/assets/stylish/components/_paginations.scss
@@ -1,4 +1,7 @@
-/* PAGINATION */
+/*
+PAGINATION
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
