--- a/framework/assets/stylish/components/_table.scss
+++ b/framework/assets/stylish/components/_table.scss
@@ -1,4 +1,7 @@
-/* TABLES */
+/*
+TABLES
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
