--- a/framework/assets/stylish/components/_tabs.scss
+++ b/framework/assets/stylish/components/_tabs.scss
@@ -1,4 +1,7 @@
-/* TABS */
+/*
+TABS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
