--- a/framework/assets/stylish/global/_forms.scss
+++ b/framework/assets/stylish/global/_forms.scss
@@ -1,4 +1,7 @@
-/* FORMS */
+/*
+FORMS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -28,7 +31,7 @@ textarea{ height: 150px; }
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 //Input generate sizes
-@include input_sizes_generate();
+@include input_sizes_generate($input_sizes);
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
