--- a/framework/assets/stylish/global/_helpers.scss
+++ b/framework/assets/stylish/global/_helpers.scss
@@ -1,4 +1,7 @@
-/*  HELPERS */
+/*
+HELPERS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
