--- a/framework/assets/stylish/global/_icons.scss
+++ b/framework/assets/stylish/global/_icons.scss
@@ -1,4 +1,7 @@
-/* ICONS */
+/*
+ICONS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
