--- a/framework/assets/stylish/global/_reset.scss
+++ b/framework/assets/stylish/global/_reset.scss
@@ -1,4 +1,7 @@
-/* RESET */
+/*
+RESET
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
