--- a/framework/assets/stylish/global/_variables_project.scss
+++ b/framework/assets/stylish/global/_variables_project.scss
@@ -1,4 +1,7 @@
-/* VARIABLES PROJECT SPECIFIC */
+/*
+VARIABLES PROJECT SPECIFIC
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
