--- a/framework/assets/stylish/global/grid/_grid_fixed.scss
+++ b/framework/assets/stylish/global/grid/_grid_fixed.scss
@@ -1,4 +1,7 @@
-/* GRID FIXED */
+/*
+GRID FIXED
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
