--- a/framework/assets/stylish/mixins/_global.scss
+++ b/framework/assets/stylish/mixins/_global.scss
@@ -1,4 +1,7 @@
-/* GLOBAL */
+/*
+GLOBAL
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 //Border
