--- a/framework/assets/stylish/mixins/_grid_fluid.scss
+++ b/framework/assets/stylish/mixins/_grid_fluid.scss
@@ -1,4 +1,7 @@
-/* GRID FLUID */
+/*
+GRID FLUID
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
