--- a/framework/assets/stylish/mixins/_mixins_project.scss
+++ b/framework/assets/stylish/mixins/_mixins_project.scss
@@ -1,2 +1,5 @@
-/* PROJECT MIXINS */
+/*
+PROJECT MIXINS
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
