--- a/framework/assets/stylish/global/_variables.scss
+++ b/framework/assets/stylish/global/_variables.scss
@@ -1,4 +1,7 @@
-/* VARIABLES */
+/*
+VARIABLES
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
