--- a/framework/assets/stylish/mixins/_grid.scss
+++ b/framework/assets/stylish/mixins/_grid.scss
@@ -1,4 +1,7 @@
-/* GRID */
+/*
+GRID
+Version: 1.0
+*/
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
