--- a/framework/assets/stylish/global/_icons.scss
+++ b/framework/assets/stylish/global/_icons.scss
@@ -17,24 +17,45 @@ Version: 1.0
 
 
 // Make icons spin
-.icon_spin {
-	@include animation(spin 2s infinite linear);
+.icon_spin{
+	-webkit-animation: spin 2s infinite linear;
+	-moz-animation: spin 2s infinite linear;
+	-o-animation: spin 2s infinite linear;
+	animation: spin 2s infinite linear;
 }
-@-moz-keyframes spin {
-	0% { -moz-transform: rotate(0deg); }
-	100% { -moz-transform: rotate(359deg); }
+
+@-moz-keyframes spin{
+	0%{ -moz-transform: rotate(0deg); }
+	100%{ -moz-transform: rotate(359deg); }
 }
-@-webkit-keyframes spin {
-	0%   { -webkit-transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(359deg); }
+
+@-webkit-keyframes spin{
+	0%{ -webkit-transform: rotate(0deg); }
+	100%{ -webkit-transform: rotate(359deg); }
 }
-@-o-keyframes spin {
-	0% { -o-transform: rotate(0deg); }
-	100% { -o-transform: rotate(359deg); }
+
+@-o-keyframes spin{
+	0%{ -o-transform: rotate(0deg); }
+	100%{ -o-transform: rotate(359deg); }
 }
-@keyframes spin {
-	0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(359deg); transform: rotate(359deg); }
+
+@keyframes spin{
+	0%{ -webkit-transform: rotate(0deg); transform: rotate(0deg); }
+	100%{ -webkit-transform: rotate(359deg); transform: rotate(359deg); }
+}
+
+.txt_icon,
+.txt_icon_left,
+.txt_icon_right{
+	i, .icon{ vertical-align: middle; }
+}
+
+.txt_icon_left{
+	i, .icon{ margin-right: 10px; }
+}
+
+.txt_icon_right{
+	i, .icon{ margin-left: 10px; }
 }
 
 
